token card section complete

--- a/index.html
+++ b/index.html
@@ -48,10 +48,33 @@
             <div class="w-full bg-[url(../assets/images/banner.png)] bg-no-repeat rounded-3xl bg-cover bg-center lg:h-[750px]">
                 <div class="text-center pt-16 pb-16 lg:pb-0 lg:pt-24">
                     <h1 class="font-rale mt-0 mx-auto text-4xl lg:text-6xl font-extrabold lg:leading-[86px] text-white lg:w-[742px]">End-to-End Travel with <span class="text-[#1DD100]">J.S Paribahan</span></h1>
-                    <p class="text-white mt-4 text-sm lg:text-lg font-normal mb-8">This is Our E-ticketing website. you can buy anytime anywhere ticket for js poribohon from this website.</p>
+                    <p class="text-white font-inter mt-4 text-sm lg:text-lg font-normal mb-8">This is Our E-ticketing website. you can buy anytime anywhere ticket for js poribohon from this website.</p>
                     <button class="btn bg-[#1DD100] border-0 text-black ">Buy Tickets</button>
                 </div>
             </div>
+            <div class="relative bottom-20 font-inter hidden lg:flex justify-center items-center gap-32">
+              <div class="flex justify-center items-center gap-4 p-10 rounded-3xl bg-white border-b-4 border-[#1DD100]">
+                  <img src="./assets/images/people.png" alt="icon">
+                  <div>
+                    <h1 class="text-4xl font-bold">500K+</h1>
+                    <p class="text-lg font-normal">Registered users</p>
+                  </div>
+              </div>
+              <div class="flex justify-center items-center gap-4 p-10 rounded-3xl bg-white border-b-4 border-[#1DD100]">
+                  <img src="./assets/images/ticket-cupon.png" alt="icon">
+                  <div>
+                    <h1 class="text-4xl font-bold">1.7 lacks</h1>
+                    <p class="text-lg font-normal">Tickets sold</p>
+                  </div>
+              </div>
+              <div class="flex justify-center items-center gap-4 p-10 rounded-3xl bg-white border-b-4 border-[#1DD100]">
+                  <img src="./assets/images/stoppage.png" alt="icon">
+                  <div>
+                    <h1 class="text-4xl font-bold">80K+</h1>
+                    <p class="text-lg font-normal">Rental partners</p>
+                  </div>
+              </div>
+          </div>
         </section>
         <!-- Banner section end -->
     </header>
