coupon section complete with respoinsive

--- a/index.html
+++ b/index.html
@@ -79,7 +79,95 @@
         <!-- Banner section end -->
     </header>
     <main>
+      <!-- coupon code section start-->
+      <section class="container mx-auto px-2">
+        <!-- best offer parent  -->
+        <div class="lg:mt-[8rem] mt-[4rem] mx-auto ">
+          <h2 class="text-center black-primary  text-[28px] lg:text-[2.25rem] font-bold">Best offers for you</h2>
+          <!-- box parent -->
+          <div class="mt-[1.5rem] flex flex-col lg:flex-row gap-6 justify-center ">
+            <!-- left coupon  box  -->
+            <div class="flex flex-1 justify-between relative p-[2rem] rounded-lg  bg-[#ffbf0f]">
+              <div>
+                <h2 class="font-extrabold inter black-primary text-[26px] lg:text-[2.125rem]">15% OFF</h2><br>
+                <h4 class="font-semibold text-base">on your next purchase</h4>
+                <p>use by january 2024</p>
+              </div>
+              <div>
+                <h2 class="font-extrabold  black-primary text-[26px] lg:text-[2.125rem]">NEW15</h2>
+                <h3>coupon Code</h3>
+              </div>
+              <div class="w-8 h-8 hidden lg:block left-[50%] -top-4 absolute bg-white rounded-full"></div>
+              <div class="w-8 h-8 left-[50%] -bottom-4  absolute bg-white rounded-full"></div>
+            </div>
+            <!-- Right coupon  box -->
+            <div class="flex flex-1 justify-between relative p-[2rem] rounded-lg   bg-[#f78c9c]">
+              <div>
+                <h2 class="font-extrabold inter black-primary text-[26px] lg:text-[2.125rem]">20% OFF</h2><br>
+                <h4 class="font-semibold text-base">on your next purchase</h4>
+                <p>use by january 2024</p>
+              </div>
+              <div>
+                <h2 class="font-extrabold text-[26px] black-primary lg:text-[2.125rem]">Couple 20</h2>
+                <h3>coupon Code</h3>
+              </div>
+              <div class="w-8 h-8 left-[50%] hidden lg:block -top-4 absolute bg-white rounded-full"></div>
+              <div class="w-8 h-8 left-[50%] -bottom-4  absolute bg-white rounded-full"></div>
+            </div>
+          </div>
+          <div class="flex justify-center items-center">
+            <button class="btn  mt-[3.25rem] border-1 text-[#1DD100] border-[#1DD100] bg-white ">See All Offers</button>
+          </div>
+        </div>
+      </section>
+      <!-- coupon code section end-->
 
+      <!-- ticket select section start -->
+      <section class="border-t-4 lg:mt-[8rem] mt-[4rem] bg-slate-200 border-[#1DD100]">
+        <div class="container lg:mt-[8rem] mt-[4rem] mx-auto">
+          <div class="">
+            <h1 class="text-[20px] lg:text-[40px] font-bold font-rale text-center">J.S Paribahan</h1>
+            <p class="font-inter my-0 mx-auto text-center text-[12px] lg:text-[18px] font-normal w-full lg:w-[736px]">This is our ticket selection part. you can buy and select ticket from this e-ticket store. and you also can buy ticket from your choice seat.</p>
+          </div>
+          <!-- ticket price show -->
+          <div class="bg-white">
+           <div>
+            <div class="flex justify-between">
+              <div class="flex gap-4">
+                <img src="./assets/images/bus-logo.png" alt="">
+                <div>
+                  <h2 class="font-rale text-[32px] font-bold">J.S Paribahan</h2>
+                  <p class="font-inter text-[20px] font-normal">Coach-009-WEB ! AC_Business</p>
+                </div>
+              </div>
+              <div class="">
+                <a class="btn bg-[#1DD10013] border-1 border-solid border-[#1DD10066] text-[#1DD100] font-bold"><img src="./assets/images/seat-green-filled.png" alt="icon"> <span>40</span> Seats left</a>
+              </div>
+            </div>
+            <!-- route section -->
+            <div>
+              <div>
+                <h1>Route</h1>
+                <p>Dhaka - Sylhet</p>
+              </div>
+              <hr>
+              <div>
+                <h1>Deperture Time</h1>
+                <p>9:00 PM</p>
+              </div>
+              <hr>
+              <div>
+                
+              </div>
+            </div>
+           </div>
+           <div>
+
+           </div>
+          </div>
+        </div>
+      </section>
+      <!-- ticket select section end -->
     </main>
     <footer>
 
