--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                   <div id="hide-input" class="relative mb-6">
                       <input id="input-coupon" class="py-5 pl-[22px] rounded-xl w-full placeholder:text-sm"
                           type="text" placeholder="Have any coupon?">
-                      <button id="couponBtn" 
+                      <button id="couponBtn" disabled
                           class="absolute right-2 top-2 btn font-semibold text-white bg-[#1DD100]">Apply</button>
                   </div>
                   <div class="font-medium flex justify-between text-[#030712]">
@@ -524,7 +524,7 @@
                   </div>
 
                   <div class="mt-4"><label class="font-semibold">Phone Number*</label><br>
-                      <input class="my-4 py-5 pl-[22px] border rounded-xl w-full" type="number"
+                      <input id="phoneNumber" class="my-4 py-5 pl-[22px] border rounded-xl w-full" type="number"
                           placeholder="Enter your phone number" required>
                   </div>
 
@@ -575,13 +575,11 @@
           <div class="flex justify-between w-full pb-12 border-dashed border-b">
               <aside>
                   <h2 class="font-rale font-extrabold text-4xl text-white mb-4">E-Ticket</h2>
-                  <p class="max-w-[374px] font-inter text-[#FFFFFFCC] text-lg">A bus ticket website is a platform that allows users to book bus
-                      tickets
-                      online.</p>
+                  <p class="max-w-[374px] font-inter text-[#FFFFFFCC] text-lg">This is ours online ticket platform.You can enjoy and get from anywhere.</p>
               </aside>
               <nav class="font-rale text-white">
                   <h6 class="text-xl mb-5">Download our app</h6>
-                  <div class="flex gap-3 bg-black px-[13px] py-[10px] border-[1.5px] rounded-lg">
+                  <div class="flex gap-3 cursor-pointer bg-black px-[13px] py-[10px] border-[1.5px] rounded-lg">
                       <div>
                           <img src="./assets/images/playstore.png" alt="">
                       </div>
@@ -598,9 +596,9 @@
                   <p class="text-[rgba(255,255,255,0.7)]">@all rights reserved, E-Ticket services limited.2024</p>
               </div>
               <div class="flex gap-8  font-medium">
-                  <p>Terms & condition</p>
-                  <p>Return & refund policy</p>
-                  <p>Privacy policy</p>
+                  <p><a href="#">Terms & condition</a></p>
+                  <p><a href="#">Return & refund policy</a></p>
+                  <p><a href="#">Privacy policy</a></p>
               </div>
           </div>
       </div>
