--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="relative bottom-20 font-inter hidden lg:flex justify-center items-center gap-32">
               <div class="flex justify-center items-center gap-4 p-10 rounded-3xl bg-white border-b-4 border-[#1DD100]">
-                  <img src="images/people.png" alt="icon">
+                  <img src="./assets/images/people.png" alt="icon">
                   <div>
                     <h1 class="text-4xl font-bold">500K+</h1>
                     <p class="text-lg font-normal">Registered users</p>
