buy ticket functionality added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="text-center pt-16 pb-16 lg:pb-0 lg:pt-24">
                     <h1 class="font-rale mt-0 mx-auto text-4xl lg:text-6xl font-extrabold lg:leading-[86px] text-white lg:w-[742px]">End-to-End Travel with <span class="text-[#1DD100]">J.S Paribahan</span></h1>
                     <p class="text-white font-inter mt-4 text-sm lg:text-lg font-normal mb-8">This is Our E-ticketing website. you can buy anytime anywhere ticket for js poribohon from this website.</p>
-                    <button class="btn bg-[#1DD100] border-0 text-black ">Buy Tickets</button>
+                    <button class="btn bg-[#1DD100] border-0 text-black "><a href="#select1">Buy Tickets</a></button>
                 </div>
             </div>
             <div class="relative bottom-20 font-inter hidden lg:flex justify-center items-center gap-32">
@@ -534,7 +534,7 @@
                   </div>
 
                   <div class="mb-6 mt-2">
-                      <button onclick="popUp()" class="w-full font-rale btn bg-[#1DD100] font-extrabold text-xl text-white">Next</button>
+                      <button id="nextBtn" onclick="popUp()" class="w-full font-rale btn bg-[#1DD100] font-extrabold text-xl text-white">Next</button>
                   </div>
 
                   <div class="flex justify-evenly text-[rgba(3,7,18,0.6)]">
