--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
               <div class="p-8 bg-[#F7F8F8] rounded-lg w-full mb-6">
                   <!-- heading  -->
                   <div class="pb-4 border-dashed font-medium border-b flex justify-between text-[#030712]">
-                      <p>Seat <sup id="selected-seat-num"
-                              class="px-2 rounded-[5px] bg-[#1DD100] text-white text-xs font-bold">0</sup>
+                      <p>Seat <span id="selected-seat-num"
+                              class="px-2 rounded-[5px] bg-[#1DD100] text-white text-xs font-bold">0</span>
                       </p>
                       <p>Class</p>
                       <p>Price</p>
@@ -538,8 +538,8 @@
                   </div>
 
                   <div class="flex justify-evenly text-[rgba(3,7,18,0.6)]">
-                      <a class="link" href="">Terms and Conditions</a>
-                      <a class="link" href="">Cancellation Policy</a>
+                      <a class="link" href="#">Terms and Conditions</a>
+                      <a class="link" href="#">Cancellation Policy</a>
                   </div>
               </div>
           </div>
@@ -552,7 +552,7 @@
 
     <!-- success modal start-->
     <section id="success-modal" class=" hidden mx-auto my-16 font-inter ">
-      <div class="w-3/4 mx-auto bg-white shadow-2xl flex flex-col items-center pb-14">
+      <div class="w-3/4 mx-auto bg-white shadow-2xl rounded-3xl flex flex-col items-center pb-14">
           <div class="flex flex-col text-center items-center gap-10">
               <div class="mt-14">
                   <img src="./assets/images/success.png" alt="">
