--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Banner section start -->
         <section class="mt-8 px-2 ">
-            <div class="w-full bg-[url(../assets/images/banner.png)] bg-no-repeat rounded-3xl bg-cover bg-center lg:h-[750px]">
+            <div class="w-full bg-[url(./assets/images/banner.png)] bg-no-repeat rounded-3xl bg-cover bg-center lg:h-[750px]">
                 <div class="text-center pt-16 pb-16 lg:pb-0 lg:pt-24">
                     <h1 class="font-rale mt-0 mx-auto text-4xl lg:text-6xl font-extrabold lg:leading-[86px] text-white lg:w-[742px]">End-to-End Travel with <span class="text-[#1DD100]">J.S Paribahan</span></h1>
                     <p class="text-white font-inter mt-4 text-sm lg:text-lg font-normal mb-8">This is Our E-ticketing website. you can buy anytime anywhere ticket for js poribohon from this website.</p>
